tests/reference/asr-program_variable-066cc64.stderr
semantic error: Symbol 'foo' must be a variable or a function
 --> tests/errors/program_variable.f90:3:7
  |
3 | bar = foo
  |       ^^^ 'foo' is a 'Program', not a variable or a function
